# horus

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  rfc.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/horus-access/: Cargo.toml
crates/horus-access/src/: lib.rs
crates/horus-access/tests/: test_access_cover_capability_expiry_boun_45.rs  test_gateway_empty_result_set_still_accr_17.rs  test_gateway_empty_result_set_still_accr_37.rs  test_zk_range_predicate_witness_shape_ig_31.rs
crates/horus-core/: Cargo.toml
crates/horus-core/src/: lib.rs
crates/horus-core/tests/: test_access_cover_capability_expiry_boun_39.rs  test_access_scope_intersection_on_overla_26.rs  test_crypto_commitment_binding_under_reo_50.rs
crates/horus-crypto/: Cargo.toml
crates/horus-crypto/src/: lib.rs
crates/horus-crypto/tests/: test_access_cover_capability_expiry_boun_23.rs  test_access_scope_intersection_on_overla_10.rs  test_access_scope_intersection_on_overla_36.rs  test_access_scope_intersection_on_overla_48.rs  test_registry_reject_malformed_predicate_38.rs  test_settlement_per_query_payout_roundin_40.rs
crates/horus-gateway/: Cargo.toml
crates/horus-gateway/src/: lib.rs
crates/horus-gateway/tests/: test_settlement_per_query_payout_roundin_14.rs  test_settlement_per_query_payout_roundin_49.rs
crates/horus-registry/: Cargo.toml
crates/horus-registry/src/: lib.rs
crates/horus-registry/tests/: test_access_cover_capability_expiry_boun_55.rs  test_crypto_commitment_binding_under_reo_13.rs  test_gateway_empty_result_set_still_accr_46.rs  test_settlement_escrow_refund_on_expired_5.rs  test_settlement_escrow_refund_on_expired_6.rs
crates/horus-settlement/: Cargo.toml
crates/horus-settlement/src/: lib.rs
crates/horus-settlement/tests/: test_access_scope_intersection_on_overla_43.rs  test_registry_reject_malformed_predicate_57.rs  test_settlement_per_query_payout_roundin_11.rs
crates/horus-zk/: Cargo.toml
crates/horus-zk/src/: lib.rs
crates/horus-zk/tests/: test_core_canonical_encoding_round_trips_18.rs  test_crypto_commitment_binding_under_reo_34.rs  test_gateway_empty_result_set_still_accr_21.rs  test_registry_freshness_window_enforceme_56.rs
docs/: architecture.md  security-model.md
docs/notes/: docs_architecture_clarify_escrow_ref_lif_16.md  docs_architecture_note_gateway_backpress_2.md  docs_expand_threat_model_on_honest_but_c_19.md  docs_security_model_add_replay_protectio_53.md  docs_security_model_list_residual_risk_f_4.md
sdk/py/: README.md  pyproject.toml
sdk/py/horus_sdk/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/ts/: README.md  package.json  tsconfig.json
sdk/ts/src/: index.ts
spec/: README.md  RFC-0001-overview.md  RFC-0004-access.md  RFC-0007-settlement.md  RFC-0009-registry.md  RFC-0011-zk-predicates.md
spec/drafts/: recursive-aggregation.md  solana-verifier.md  spec_add_open_question_on_batched_settle_20.md  spec_rfc_0004_note_revocation_propagatio_30.md  spec_rfc_0007_clarify_per_query_fee_acco_9.md  spec_rfc_0009_pin_commitment_hash_to_bla_3.md  spec_rfc_0011_refine_soundness_assumptio_25.md  spec_rfc_0011_split_predicate_vs_query_c_29.md
