[workspace]
resolver = "2"
members = [
    "crates/horus-core",
    "crates/horus-access",
    "crates/horus-settlement",
    "crates/horus-registry",
    "crates/horus-crypto",
    "crates/horus-zk",
    "crates/horus-gateway",
    "cli",
    "sdk/rust",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/usehorus/horus"
homepage = "https://usehorus.xyz"
authors = ["HORUS contributors"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4"
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
