[package]
name = "horus-access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability issuance and offline verification (RFC-0004)."

[dependencies]
horus-core = { path = "../horus-core" }
horus-crypto = { path = "../horus-crypto" }
serde.workspace = true
thiserror.workspace = true
