[project]
name = "horus-sdk"
version = "0.4.0b1"
description = "Python client for the HORUS data-access protocol (beta)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "HORUS contributors" }]
dependencies = [
    "blake3>=0.4",
    "solana>=0.30",
]

[project.urls]
Homepage = "https://usehorus.xyz"
Repository = "https://github.com/usehorus/horus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horus_sdk"]
