[package]
name = "horus-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client SDK for HORUS: build listings, request capabilities, query."

[dependencies]
horus-core = { path = "../../crates/horus-core" }
horus-crypto = { path = "../../crates/horus-crypto" }
horus-access = { path = "../../crates/horus-access" }
serde.workspace = true
